--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite --port 4200",
     "build": "run-p type-check \"build-only {@}\" --",
+    "build:prod": "run-p type-check \"build-only {@}\" -- --mode production",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
