--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "vite-plugin-vuetify": "^2.0.3",
     "vue-router": "^4.4.0",
     "vue-tsc": "^2.1.10"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.9.5"
   }
 }
